style.css
html,body {
width: 100%;
margin: 0px;
color: #2d313c;
}


div {
  display: block;
}

h1 {

}

.flex-container img {
  max-width: 100%;

}


.navbar .navbar-nav>li>a {
  color: white;
}

.navbar .navbar-nav>li>a:hover {
  color: #2d313c;
}

.navbar .navbar-toggle {
  border: none;
}

.navbar .navbar-brand {
  color: white;
}

.navbar .navbar-toggle .icon-bar {
  background-color: white;
}

.navbar .navbar-toggle:hover {
  background-color: rgb(243, 170, 40);
}


.navbar-toggle {
  border-radius: 0px;
}

 .nav {
  background-color: rgb(243, 170, 40);
  padding: 0.1% 7%;
  border: none;
  vertical-align: middle;
}

.nav--mods1 {
  line-height: 30px;
}

.navbar-brand img {
  height: 5vh;
}

.menu__line {
  width: 30%;
}

section {
  width: 100vw;

}

.flex-container {
  display: flex;
  flex-flow: row wrap;
  align-items: center;
  justify-content: center;
  width: 100vw;
  text-align: center;
}



#s1 {
  background-image: url("img/bg/s1__bg.png");
  background-position: center;
  background-size: cover;


}

#s1__counter {
  position: relative;
  flex-grow: 1;
  flex-basis: 200px;
}



.s1--mods {
  position: relative;
  height: 100vh;
  align-items: flex-end;
}

.s1__timer {


}

.s1__button--fund {
  flex-basis: 150px;
  padding-bottom: 5vh;

}

#s2 {
  background-image: url("img/bg/s2__bg.png");
}

.s2--mods {
  padding: 10%;
}

#s7 {
}

.s7--mods {
  align-items: flex-start;
  padding: 7% 0;
}

.s7__title {
  flex-basis: 5vw;
  margin-right: 1vw;
}

.s7__content {
  flex-basis: 80vw;
  flex-direction: column;
}

.s7__content__top {
  flex-grow: 1;
  width: 80vw;
  flex-direction: row;
  align-items: center;
  justify-content: center;


}

.s7__content__top__item {
  flex-grow: 2;
  flex-basis: 350px;
  margin: 1vw;
}

.s7__content__slide {
  flex-grow: 1;
  height: 10vh;
  background: white;
  margin-top: 3vh;
  margin-left: 1vw;
  margin-right: 1vw;
}

#s3 {
  background-image: url("img/bg/s3__bg.png");
}

.s3--mods {
  padding: 5%;
  align-items: flex-start;
}

.s3__title {
  flex-basis: 5vw;
  margin-right: 5vw;
}

.s3__content {
  flex-basis: 70vw;
  flex-direction: column;
}

.s3__content__buttons {
  flex-basis: 10vh;
  width: 100%;
  flex-direction: row;
  align-items: center;
  justify-content: flex-start;
}
  .s3__content__buttons--mods {
    flex-basis: 200px;
  }


.s3__content__content {
  flex-basis: 80vh;
  /*background-image: url("img/s3__content.png");*/
  background-position: center;
  background-size: cover;
  width: 70vw;
  margin-top: 1vw;
}

  .s3__content__content__map {

  }

#s4 {
  background-image: url("img/bg/s4__bg.png");
}

.s4--mods {
  align-items: flex-start;
  padding: 7% 0;
}

.s4__title {
  width: 5vw;
  margin-right: 1vw;
}

.s4__content {
  flex-basis: 80vw;
}

.s4__content__item {
  flex-grow: 3;
  flex-basis: 300px;
  margin: 1vw;
}

/*
.s4__item>img {
  position: absolute;
}
*/

.s4__item1 {
  flex-grow: 1;
  flex-basis: 250px;

  background-color: #f9d3d3;
  margin: 2.5px;
}

#s5 {
  background-color: #fbe6e6;
}

.s5--mods {
  padding: 5% 10% 5% 10%;
}

.s5__title {
  background-color: #fbe6e6;
  width: 100vw;
  height: 10vh;
  margin: 2.5px;
}

.s5__item1 {
  flex-grow: 2;
  flex-basis: 400px;
  height: 90vh;
  background-color: #f9d3d3;
  margin: 2.5px;
}

#s6 {
  background-image: url("img/bg/s7__bg.png");
}

.s6--mods {
  padding: 5% 10% 5% 10%;
}

.s6__title {
  background-color: #fbe6e6;
  width: 100vw;
  height: 10vh;
  margin: 2.5px;
}

.s6__item {
  flex-grow: 3;
  flex-basis: 250px;
  height: 250px;
  background-color: #f9d3d3;
  margin: 2.5px;
}

#s7 {
  background-image: url("img/bg/s7__bg.png");
}

.foot-bar {
  height: 50vh;
  background-color: #2d313c;
}

@media (max-width: 768px) {


}


@media (min-width: 576px) {  }


@media (max-width: 768px) {
  .s4__title, .s7__title {
    display: none;
  }
 }

@media (min-width: 992px) {  }

@media (min-width: 1200px) {  }

